--- a/index.html
+++ b/index.html
@@ -1641,6 +1641,91 @@
                 </div>
             </div>
         </div>
+
+        <div class="portfolio-modal modal fade" id="milestonesModal8" tabindex="-1" role="dialog" aria-labelledby="#milestonesModal0Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
+                    <div class="modal-body text-center">
+                        <div class="container-fluid">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Milestone Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary mb-0">First Sale</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Milestone Modal - Image--><img class="img-fluid rounded mb-5 w-50 h-50" src="assets/img/milestones/Milestone-8.jpg" alt="M5"/>
+                                    <!-- Milestone Modal - Text-->
+
+                                </div>
+
+                                <div class="row justify-content-center">
+                                    <p class="mb-5 pre-wrap lead" style="margin: 15px">For this milestone we contacted a few people, both pet parents and technical people for feedback on our prototype and their wishes for future development.</p>
+                                </div>
+
+                                <div class="row justify-content-center">
+                                    <h5 class="text-secondary mb-1 d-inline-block">Feedbacks</h5>
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                </div>
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6 ml-auto">
+                                        <p class="mb-5 pre-wrap lead">Vasile: Nu imi place ca nu e deloc responsive aplicatia si nu ma refer la randat pe telefon, nu am feedback, fac ceva si nu vad rezultatul. Ar fi fost frumos daca puteam sa vad profilele altora. E nasol ca nu ai history si nu merge buttonul de back din browser. Ca design e ok, cam simplist. Ar fi fost frumos daca aparea si poza utilizatorului cand facea un post.</p>
+                                    </div>
+
+                                    <div class="col-lg-6 mr-auto">
+                                        <a href="assets/img/milestones/milestone-8/p1.jpg" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/milestone-8/p1.jpg" style="height: 320px;">
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6 ml-auto">
+                                        <a href="assets/img/milestones/milestone-8/p2.jpg" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/milestone-8/p2.jpg" style="height: 320px;">
+                                        </a>
+                                    </div>
+
+                                    <div class="col-lg-6 mr-auto">
+                                        <p class="mb-5 pre-wrap lead">Anutza: Heeeei legat de site, it s absolutely lovely, and I think I've told you this before, ador ideea si initiativa It's really easy to navigate si foarte clar, mi se pare ca e perfect (aka poate fi navigat si de oameni care nu o au cu tehnologia, ceea ce e o idee excelenta).Cred ca singurele chestii pe care le-as zice ar fi ca (la mine cel putin ) nu a mers pe telefon (which might be a problem for some) si ca interfata initiala (aia unde inserezi nume si parola ) e putin scary, asa ,neagra :))) - but ofc that's a design decision, ofc, si it might be just me. But huge huge congrats, it s amazing</p>
+                                    </div>
+                                </div>
+
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6 ml-auto">
+                                        <p class="mb-5 pre-wrap lead">Diana: Arata super bine! Imi plac comentariile. Ce mi-ar mai placea sa vad, daca de exemplu un anumit medicament e pe stoc in farmacia respectiva, poate niste forumuri legat de cabinetul veterinar in care oamenii sa posteze dupa ce probleme au avut si cum se simte animalutul. Ar fi dragut sa aveti legat de cabinetul veterinar poze cu animalute before/after.</p>
+                                    </div>
+
+                                    <div class="col-lg-6 mr-auto">
+                                        <a href="assets/img/milestones/milestone-8/p4.jpg" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/milestone-8/p4.jpg" style="height: 320px;">
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="row justify-content-center">
+                                    <h5 class="text-secondary mb-1 d-inline-block">Conclusion</h5>
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <p class="mb-5 pre-wrap lead" style="margin: 15px;"> The feedback we have received has proven to us that the shortcomings of the MVP were not vision oversights, but time constraints.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
         <!-- <div class="row justify-content-center">
             <h5 class="text-secondary mb-1 d-inline-block">Preparing the Landing Page</h5>
             <div class="divider-custom">
