--- a/index.html
+++ b/index.html
@@ -1586,6 +1586,14 @@
 
                                 <div class="row justify-content-center">
                                     <p class="mb-5 pre-wrap lead">Our MVP is an early prototype of our vision for the Artio pet network. Check it <a href="http://4droid.go.ro:4200/" target="_blank">here</a> !</p>
+                                    <p class="mb-5 pre-wrap lead">Here are the technologies we used:</p>
+                                    <ul class="lead text-left">
+                                        <li>Frontend → Angular</li>
+                                        <li>Backend → GO</li>
+                                        <li>Deploy → Docker</li>
+                                        <li>Deploy → Docker & Github Actions</li>
+                                        <li>Hosting powered by @4droid</li>
+                                    </ul>
                                 </div>
 
                                 <div class="row justify-content-center">
