sa intre septarii

--- a/index.html
+++ b/index.html
@@ -1590,7 +1590,7 @@
                                     <ul class="lead text-left">
                                         <li>Frontend → Angular</li>
                                         <li>Backend → GO</li>
-                                        <li>Deploy → Docker</li>
+                                        <li>Database → Redis</li>
                                         <li>Deploy → Docker & Github Actions</li>
                                         <li>Hosting powered by @4droid</li>
                                     </ul>
