final presentation added

--- a/index.html
+++ b/index.html
@@ -172,6 +172,17 @@
                             </div><img class="img-fluid" src="assets/img/milestones/Milestone-8.jpg" alt="M8"/>
                         </div>
                     </div>
+
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="text-center">
+                            <h4 class="text-secondary mb-1 d-inline-block">Final Presentation</h4>
+                        </div>
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#milestonesModal9">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div><img class="img-fluid" src="assets/img/milestones/Milestone-9.jpg" alt="M9"/>
+                        </div>
+                    </div>
                     <!--
                         THIS IS THE TEMPLATE FOR ADDING MILESTONES CLICKABLE ICONS
 
@@ -1734,6 +1745,133 @@
                 </div>
             </div>
         </div>
+
+        <div class="portfolio-modal modal fade" id="milestonesModal9" tabindex="-1" role="dialog" aria-labelledby="#milestonesModal0Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
+                    <div class="modal-body text-center">
+                        <div class="container-fluid">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Milestone Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary mb-0">Final Presentation</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Milestone Modal - Image--><img class="img-fluid rounded mb-5 w-50 h-50" src="assets/img/milestones/Milestone-9.jpg" alt="M5"/>
+                                    <!-- Milestone Modal - Text-->
+
+                                </div>
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6 ml-auto">
+                                        <a href="assets/img/milestones/final-presentation/0.png" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/0.png" style="height: 530px;">
+                                        </a>
+                                    </div>
+
+                                    <div class="col-lg-6 mr-auto">
+                                        <a href="assets/img/milestones/final-presentation/1.png" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/1.png" style="height: 530px;">
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6 ml-auto">
+                                        <a href="assets/img/milestones/final-presentation/2.png" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/2.png" style="height: 530px;">
+                                        </a>
+                                    </div>
+
+                                    <div class="col-lg-6 mr-auto">
+                                        <a href="assets/img/milestones/final-presentation/3.png" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/3.png" style="height: 530px;">
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6 ml-auto">
+                                        <a href="assets/img/milestones/final-presentation/4.png" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/4.png" style="height: 530px;">
+                                        </a>
+                                    </div>
+
+                                    <div class="col-lg-6 mr-auto">
+                                        <a href="assets/img/milestones/final-presentation/5.png" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/5.png" style="height: 530px;">
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6 ml-auto">
+                                        <a href="assets/img/milestones/final-presentation/6.png" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/6.png" style="height: 530px;">
+                                        </a>
+                                    </div>
+
+                                    <div class="col-lg-6 mr-auto">
+                                        <a href="assets/img/milestones/final-presentation/7.png" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/7.png" style="height: 530px;">
+                                        </a>
+                                    </div>
+                                </div>
+                                
+
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6 ml-auto">
+                                        <a href="assets/img/milestones/final-presentation/8.png" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/8.png" style="height: 530px;">
+                                        </a>
+                                    </div>
+
+                                    <div class="col-lg-6 mr-auto">
+                                        <a href="assets/img/milestones/final-presentation/9.png" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/9.png" style="height: 530px;">
+                                        </a>
+                                    </div>
+                                </div>
+
+
+                                <div class="row justify-content-center">
+
+                                    <div class="col-lg-6 ml-auto">
+                                        <a href="assets/img/milestones/final-presentation/10.png" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/10.png" style="height: 530px;">
+                                        </a>
+                                    </div>
+
+                                    <div class="col-lg-6 mr-auto">
+                                        <a href="assets/img/milestones/final-presentation/11.png" target="_blank">
+                                            <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/11.png" style="height: 530px;">
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="row justify-content-center">
+                                    <a href="assets/img/milestones/final-presentation/12.png" target="_blank">
+                                        <img class="mb-5 pre-wrap lead" src="assets/img/milestones/final-presentation/12.png" style="height: 530px;">
+                                    </a>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
         <!-- <div class="row justify-content-center">
             <h5 class="text-secondary mb-1 d-inline-block">Preparing the Landing Page</h5>
             <div class="divider-custom">
